# Emporium

./: .gitignore  README.md  config_example.json  emporium.py  pyproject.toml  utility.py
assets/: slot_gradient.psd
